// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blank request 1`] = `
<div>
  <div
    className="sh sh--y"
  >
    <h2
      className="sh-title"
    >
      Cosmic Incursion
    </h2>
  </div>
  <div
    className="m-v500"
  >
    <div
      className="g g--top"
    >
      <div
        className="g--7"
      >
        <textarea
          className={
            Object {
              "data-css-1gh870p": "",
            }
          }
          defaultValue=""
          name="description"
          onBlur={[Function]}
          onInput={[Function]}
          placeholder="How can we help?"
        />
      </div>
      <img
        alt=""
        className="g--5"
        src="/static/img/311-watermark.svg"
        style={
          Object {
            "display": "block",
          }
        }
      />
    </div>
  </div>
  <div
    className="g"
  >
    <div
      className="g--9"
    />
    <button
      className="btn g--33"
      disabled={false}
      onClick={[Function]}
    >
      Next
    </button>
  </div>
</div>
`;

exports[`existing description 1`] = `
<div>
  <div
    className="sh sh--y"
  >
    <h2
      className="sh-title"
    >
      Cosmic Incursion
    </h2>
  </div>
  <div
    className="m-v500"
  >
    <div
      className="g g--top"
    >
      <div
        className="g--7"
      >
        <textarea
          className={
            Object {
              "data-css-1i2zjxt": "",
            }
          }
          defaultValue="Please pick up my bulk items. "
          name="description"
          onBlur={[Function]}
          onInput={[Function]}
          placeholder="How can we help?"
        />
      </div>
      <img
        alt=""
        className="g--5"
        src="/static/img/311-watermark.svg"
        style={
          Object {
            "display": "block",
          }
        }
      />
    </div>
  </div>
  <div
    className="g"
  >
    <div
      className="g--9"
    />
    <button
      className="btn g--33"
      disabled={false}
      onClick={[Function]}
    >
      Next
    </button>
  </div>
</div>
`;

exports[`service with metadata 1`] = `
<div>
  <div
    className="sh sh--y"
  >
    <h2
      className="sh-title"
    >
      Cosmic Incursion
    </h2>
  </div>
  <div
    className="m-v500"
  >
    <div
      className="g g--top"
    >
      <div
        className="g--7"
      >
        <textarea
          className={
            Object {
              "data-css-1gh870p": "",
            }
          }
          defaultValue=""
          name="description"
          onBlur={[Function]}
          onInput={[Function]}
          placeholder="How can we help?"
        />
        <div>
          <label
            className="txt"
          >
            <span
              className="txt-l"
            >
              Please provide any other relevant information:
               
            </span>
            <textarea
              className="txt-f"
              name="ST-CMTS"
              onChange={[Function]}
              rows="5"
              value=""
            />
          </label>
        </div>
      </div>
      <img
        alt=""
        className="g--5"
        src="/static/img/311-watermark.svg"
        style={
          Object {
            "display": "block",
          }
        }
      />
    </div>
  </div>
  <div
    className="g"
  >
    <div
      className="g--9"
    />
    <button
      className="btn g--33"
      disabled={false}
      onClick={[Function]}
    >
      Next
    </button>
  </div>
</div>
`;
